[package]
name = "actix-web-oauth2"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "google"
path = "src/bin/google.rs"

[[bin]]
name = "github"
path = "src/bin/github.rs"

[dependencies]
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-web = "4.9"
anyhow = "1.0.89"
dotenv = "0.15.0"
oauth2 = "4.4"
serde = { version = "1.0.210", features = ["derive"] }
tokio = "1.40.0"
